# fastapi-todo

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: push-docker-image.yml
alembic/versions/: 1b2c6291c2a2_create_tasks_table.py  3d4aec5e10b5_create_done_table.py
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
tests/: test_main.py
